# ros2_remote_sureveillance_robot

./: README.md
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: gazebo.launch.py  surveillance.launch.py
src/robot_bringup/urdf/: surveillance_robot.urdf.xacro
src/robot_bringup/worlds/: surveillance_world.world
src/web_dashboard/: package.xml  setup.py
src/web_dashboard/html/: index.html
